Config Options from May 27, foresight and delayed

--- a/config/config.my_sector_europe_myopictest.yaml
+++ b/config/config.my_sector_europe_myopictest.yaml
@@ -20,6 +20,14 @@ scenario:
   - 39
   opts:
   - ''
+  planning_horizons:
+  - 2025
+  - 2030
+  - 2040
+  - 2050
+
+# docs in https://pypsa-eur.readthedocs.io/en/latest/configuration.html#foresight
+foresight: myopic
 
 countries: ['AL', 'AT', 'BA', 'BE', 'BG', 'CH', 'CZ', 'DE', 'DK', 'EE', 'ES', 'FI', 'FR', 'GB', 'GR', 'HR', 'HU', 'IE', 'IT', 'LT', 'LU', 'LV', 'ME', 'MK', 'NL', 'NO', 'PL', 'PT', 'RO', 'RS', 'SE', 'SI', 'SK', 'XK']
 
@@ -31,12 +39,12 @@ snapshots:
 
 co2_budget:
   2020: 0.720 # 0.720 #average emissions of 2019 to 2021 relative to 1990, CO2 excl LULUCF, EEA data, European Environment Agency. (2023a). Annual European Union greenhouse gas inventory 1990–2021 and inventory report 2023 - CRF Table. https://unfccc.int/documents/627830
-  2025: 0.720 #0.648 # With additional measures (WAM) projection, CO2 excl LULUCF, European Environment Agency. (2023e). Member States’ greenhouse gas (GHG) emission projections 2023. https://www.eea.europa.eu/en/datahub/datahubitem-view/4b8d94a4-aed7-4e67-a54c-0623a50f48e8
-  2030: 0.720 #0.450 # 55% reduction by 2030 (Ff55)
-  2035: 0.720 #0.250
-  2040: 0.720 #0.100 # 90% by 2040
-  2045: 0.720 #0.050
-  2050: 0.720 #0.000 
+  2025: 0.648 # With additional measures (WAM) projection, CO2 excl LULUCF, European Environment Agency. (2023e). Member States’ greenhouse gas (GHG) emission projections 2023. https://www.eea.europa.eu/en/datahub/datahubitem-view/4b8d94a4-aed7-4e67-a54c-0623a50f48e8
+  2030: 0.450 # 55% reduction by 2030 (Ff55)
+  2035: 0.250
+  2040: 0.100 # 90% by 2040
+  2045: 0.050
+  2050: 0.050 #0.00, but didn't solve when 0.00, seing if it's the carbon budget [May 26, 2025]
 
 
 electricity:
@@ -44,7 +52,7 @@ electricity:
   co2limit: 100.e+6
 
   extendable_carriers:
-    Generator: [solar, solar-hsat, onwind, offwind-ac, offwind-dc, offwind-float, oil, OCGT, CCGT, coal, lignite, geothermal, biomass]
+    Generator: [solar, solar-hsat, onwind, offwind-ac, offwind-dc, offwind-float] #, OCGT, CCGT, coal, lignite, geothermal, biomass, oil]
     StorageUnit: [battery]
     Store: [battery, H2] #probably want to give the model the option to add more than just h2 stores
     Link: [H2 pipeline] #probably want to give the model the option to add more than just h2 pipelines 
@@ -103,7 +111,8 @@ pypsa_eur: #I think I need to add in conventional generators and buses into the 
   - lignite
   - coal 
   #- import export tracker
-  - oil 
+  - oil
+  - biomass 
   Link:
   - DC
   ## commenting these out to see if it will allow pypsa eur run on April 25 to bring back the emissions for these generators
@@ -112,7 +121,7 @@ pypsa_eur: #I think I need to add in conventional generators and buses into the 
   - lignite
   - biomass
   - oil
-  #- coal 
+  - coal 
   Generator:
   - onwind
   - offwind-ac
@@ -122,7 +131,8 @@ pypsa_eur: #I think I need to add in conventional generators and buses into the 
   - solar
   - ror
   - nuclear
-  - coal
+  #- biomass
+  #- coal
   #- OCGT
   #- CCGT
   #- lignite
@@ -149,7 +159,7 @@ costs:
     lifetime: 25
     "CO2 intensity": 0 #need to input a co2 intensity for all values that are not present so that they can be seen by global constraints
     "discount rate": 0.07
-  overwrites: {co2_emissions : {oil : 0.2571, gas : 0.198 }}  #to have oil register with a c02 intensity, have {"CO2 intensity" : {oil : 0.2571, gas : 0.198 }} # tCO2/MWh_th
+  overwrites: {}  #to have oil register with a c02 intensity, have {"CO2 intensity" : {oil : 0.2571, gas : 0.198 }} # tCO2/MWh_th
   capital_cost: #added because there was geothermal produced in Italy even though there was a capital cost that should have been included. 
     geothermal: 6983145.710599946  #added because there was geothermal produced in Italy even though there was a capital cost that should have been included. 
   marginal_cost:
@@ -193,8 +203,6 @@ clustering: ## From April 29 Update #ended up reverting to January update
 sector:
   transport: true
   heating: true
-  gas_network: true #add existing gas network 
-  H2_retrofit: true
   biomass: true
   industry: true #this doesn't work for lack of fischer-tropsch buses #that is solved if you put oil in bus: and link: under pypsa_eur
   agriculture: true #doesn't work for lack of EU agricultural machinery oil bus #this is solved if you putp oil in bus: and link" under pypsa_eur 
@@ -212,14 +220,33 @@ sector:
     lignite: lignite 
     coal: coal 
     CCGT: gas
-  #co2_sequestration_potential: #lowered sequestion potential heavily from default 
-  #  2020: 50
-  #  2025: 100
-  #  2030: 100
-  #  2035: 150
-  #  2040: 150
-  #  2045: 150
-  #  2050: 150
+  #flex enablers, all turned off for most simplifed version
+  bev_dsm: false
+  v2g: false
+    #keeping defaults for shipping moving to methanol 
+  tes: false #no thermal storage for heating (not necessairly true, but paring back everything)
+  boilers: true #gas heating, yeah that's what is happening now
+  resistive_heaters: true #resistive heating using electricity, yes
+  solar_thermal: true
+  methanation: false #no methanation for now 
+  coal_cc: false
+  dac: false #true, no direct air capture 
+  co2_vent: false
+  central_heat_vent: true
+  allam_cycle_gas: false
+  hydrogen_fuel_cell: true
+  hydrogen_turbine: false
+  SMR: true
+  SMR_cc: true
+  gas_network: true #add existing gas network 
+  H2_retrofit: false #for simplified version, don't need hydrogen retrofit, but the model can build hydrogen completely from new 
+  #The rest of the defaults I agree with 
+  chp:
+    enable: false #true
+    fuel:
+    - solid biomass # For solid biomass, CHP with and without CC are added
+    - gas # For all other fuels the same techno economic data from gas CHP is taken
+  electricity_distribution_grid: true
 
 
 lines:
