--- a/config/test/config.electricity.yaml
+++ b/config/test/config.electricity.yaml
@@ -9,7 +9,7 @@ run:
   name: "test-elec" # use this to keep track of runs with different settings
   disable_progressbar: true
   shared_resources:
-    policy: false
+    policy: "test"
   shared_cutouts: true
 
 scenario:
@@ -47,13 +47,22 @@ atlite:
       time: ["2013-03-01", "2013-03-08"]
 
 renewable:
+  onwind:
+    cutout: be-03-2013-era5
   offwind-ac:
+    cutout: be-03-2013-era5
     max_depth: false
   offwind-dc:
+    cutout: be-03-2013-era5
     max_depth: false
   offwind-float:
+    cutout: be-03-2013-era5
     max_depth: false
     min_depth: false
+  solar:
+    cutout: be-03-2013-era5
+  solar-hsat:
+    cutout: be-03-2013-era5
 
 
 clustering:
@@ -64,6 +73,7 @@ clustering:
 lines:
   dynamic_line_rating:
     activate: true
+    cutout: be-03-2013-era5
     max_line_rating: 1.3
 
 
@@ -73,7 +83,7 @@ solving:
     options: highs-simplex
 
   check_objective:
-    enable: false
+    enable: true
     expected_value: 3.8120188094e+07
 
 plotting:
