--- a/config/test/config.overnight.yaml
+++ b/config/test/config.overnight.yaml
@@ -8,7 +8,7 @@ run:
   name: "test-sector-overnight"
   disable_progressbar: true
   shared_resources:
-    policy: false
+    policy: "test"
   shared_cutouts: true
 
 
@@ -46,13 +46,22 @@ atlite:
       time: ["2013-03-01", "2013-03-08"]
 
 renewable:
+  onwind:
+    cutout: be-03-2013-era5
   offwind-ac:
+    cutout: be-03-2013-era5
     max_depth: false
   offwind-dc:
+    cutout: be-03-2013-era5
     max_depth: false
   offwind-float:
+    cutout: be-03-2013-era5
     max_depth: false
     min_depth: false
+  solar:
+    cutout: be-03-2013-era5
+  solar-hsat:
+    cutout: be-03-2013-era5
 
 clustering:
   temporal:
@@ -74,7 +83,7 @@ solving:
   mem: 4000
 
   check_objective:
-    enable: false
+    enable: true
     expected_value: 6.96e+08
 
 plotting:
