--- a/config/test/config.perfect.yaml
+++ b/config/test/config.perfect.yaml
@@ -8,7 +8,7 @@ run:
   name: "test-sector-perfect"
   disable_progressbar: true
   shared_resources:
-    policy: false
+    policy: "test"
   shared_cutouts: true
 
 foresight: perfect
@@ -42,8 +42,6 @@ electricity:
 sector:
   min_part_load_fischer_tropsch: 0
   min_part_load_methanolisation: 0
-  solid_biomass_import:
-    enable: true
 
 atlite:
   default_cutout: be-03-2013-era5
@@ -55,13 +53,22 @@ atlite:
       time: ["2013-03-01", "2013-03-08"]
 
 renewable:
+  onwind:
+    cutout: be-03-2013-era5
   offwind-ac:
+    cutout: be-03-2013-era5
     max_depth: false
   offwind-dc:
+    cutout: be-03-2013-era5
     max_depth: false
   offwind-float:
+    cutout: be-03-2013-era5
     max_depth: false
     min_depth: false
+  solar:
+    cutout: be-03-2013-era5
+  solar-hsat:
+    cutout: be-03-2013-era5
 
 clustering:
   temporal:
@@ -81,7 +88,7 @@ solving:
   mem: 4000
 
   check_objective:
-    enable: false
+    enable: true
     expected_value: 1.3778753459e+10
 
 plotting:
