--- a/config/test/config.scenarios.yaml
+++ b/config/test/config.scenarios.yaml
@@ -12,6 +12,8 @@ run:
     enable: true
     file: "config/test/scenarios.yaml"
   disable_progressbar: true
+  shared_resources:
+    policy: base
   shared_cutouts: true
 
 scenario:
@@ -42,10 +44,16 @@ atlite:
       time: ["2013-03-01", "2013-03-08"]
 
 renewable:
+  onwind:
+    cutout: be-03-2013-era5
   offwind-ac:
+    cutout: be-03-2013-era5
     max_depth: false
   offwind-dc:
+    cutout: be-03-2013-era5
     max_depth: false
+  solar:
+    cutout: be-03-2013-era5
 
 solving:
   solver:
